# ninjaone-patch-toolkit

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  ci-docs-skip-test.md  deny.toml  justfile  rust-toolchain.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: agents-md-staleness-check.sh  command-parity-check.sh  conventional-commit-validator.sh  docs-staleness-check.sh  secrets-scanner.sh
.claude/skills/debug/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  screenshot.yml
docs/: RELEASING.md  TROUBLESHOOTING.md
scripts/: package.json  screenshot.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  error.rs  export.rs  filter.rs  lib.rs  main.rs  model.rs  report.rs  rows.rs  settings.rs  state.rs
src-tauri/src/api/: devices.rs  lookups.rs  mod.rs  patches.rs
src-tauri/src/commands/: auth.rs  export.rs  lookups.rs  mod.rs  patches.rs  settings.rs  update.rs
web-rs/: Cargo.toml  index.html  styles.css
web-rs/src/: api.rs  app.rs  demo.rs  main.rs  types.rs
web-rs/src/app/: charts.rs  controls.rs  filters.rs  header.rs  settings.rs  state.rs  tables.rs  toaster.rs  update.rs  util.rs
